# world-headlines

./: .gitattributes  .gitignore  Makefile  README.md  docker-compose.yaml  note.ipynb  run.bat  run.sh  stop.bat  stop.sh
.github/workflows/: ci-backend.yaml  ci-frontend.yaml  ci-helm.yaml  ci.yaml  deploy-frontend-webyaml  unlock-repo.yaml
airflow/: .env  Dockerfile  Dockerfile.dev  docker-compose.yaml  requirements.txt
airflow/dags/: dag.py  schedule_gnews_crawling.py
airflow/dags/gnews_crawling/: Dockerfile  Makefile  README.md  pyproject.toml
airflow/dags/gnews_crawling/src/: etl.py
airflow/dags/gnews_crawling/src/component/: worker_batch.py  worker_item.py
airflow/dags/gnews_crawling/src/infra/: env.py  sqlalchemy.py
airflow/dags/gnews_crawling/src/model/: news.py
airflow/dags/gnews_crawling/src/task/: extract.py  load.py  transform.py
airflow/tests/: conftest.py  mssql_tear_down.sql  (+3 more)
backend/: .gitignore  Dockerfile  README.md  build.gradle.kts  run.sh
design/: preview.html  styles.css
docs/: airflow.md  linux.md  plan.md  pytest.md  selenium.md  sqlalchemy.md  system_design.md  tqdm.md  tsql.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  server.dev.ts  vite.config.ts
frontend_web/: .env  Dockerfile  README.md  package-lock.json  package.json
helm/: Chart.yaml
kubernetes/: Makefile  secret.example.yaml
sql/: db_init.sql
updater/: config.py  db_init.sql  db_setting.py  main.py  models.py  repositories.py  services.py  test_repositories.py  updater.py
webapp/: next.config.mjs  package-lock.json  package.json
(+124 files in other folders)
